--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
     width: 800px;
     margin: 30px auto;
     border-radius: 20px;
-    overflow: hidden; /* Ensure content doesn't overflow the container */
+    overflow: hidden;
 }
 
 .login-section {
@@ -41,7 +41,7 @@ body {
     background-color: #E2F1E7;
     justify-content: center;
     border-radius: 20px 0 0 20px;
-    padding: 20px; /* Add padding for better spacing */
+    padding: 20px;
 }
 
 .welcome {
@@ -61,14 +61,14 @@ body {
     border-radius: 10px;
     border: 1.5px solid black;
     height: 35px;
-    margin-bottom: 10px; /* Add margin-bottom for spacing between inputs */
+    margin-bottom: 10px;
 }
 
 .form label {
     color: #3581B5;
     font-weight: bold;
     font-size: 15px;
-    margin-bottom: 5px; /* Add margin-bottom for spacing between label and input */
+    margin-bottom: 5px;
 }
 
 .forgot-password {
@@ -84,7 +84,7 @@ form button {
     border-radius: 10px;
     padding: 10px;
     width: 100px;
-    margin: 10px auto; /* Add margin for spacing */
+    margin: 10px auto;
     transition: background-color 0.3s, opacity 0.3s;
     font-weight: bold;
 }
@@ -101,7 +101,7 @@ form button:active {
     display: flex;
     align-items: center;
     text-align: center;
-    margin: 10px 0; /* Add margin for spacing */
+    margin: 10px 0;
 }
 
 .or-divider hr {
@@ -119,16 +119,16 @@ form button:active {
 
 .google-btn {
     width: auto;
-    margin: 10px auto;   
+    margin: 10px auto;
     padding: 10px 20px;
     font-size: 12px;
     font-weight: bold;
-    background-color: #DB4437; /* Google button specific background color */
+    background-color: #DB4437;
     color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    transition: background-color 0.3s, opacity 0.3s; /* Add transition for hover and active states */
+    transition: background-color 0.3s, opacity 0.3s;
 }
 
 .google-btn:hover {
@@ -145,40 +145,39 @@ form button:active {
 
 a {
     text-decoration: underline;
-    text-decoration-color: black; /* Set the underline color to black */
+    text-decoration-color: black;
     color: black;
     font-size: 12px;
     font-weight: bold;
-    transition: text-decoration-color 0.3s, color 0.3s, opacity 0.3s; /* Add transition for hover and active states */
+    transition: text-decoration-color 0.3s, color 0.3s, opacity 0.3s;
 }
 
 a:hover {
-    text-decoration-color: #1aabb6; /* Change the underline color on hover */
+    text-decoration-color: #1aabb6;
     color: #1aabb6;
 }
 
 a:active {
-    opacity: 0.8; /* Change the opacity of the link on click */
+    opacity: 0.8;
 }
 
 .graphic-section {
-    width: 50%; /* Ensure the div takes the full width of its container */
-    height: auto; /* Ensure the div takes the full height of its container */
+    width: 50%;
+    height: auto;
     position: relative;
     border-radius: 0 20px 20px 0;
-    overflow: hidden; /* Ensure content doesn't overflow the container */
+    overflow: hidden;
 }
 
 .graphic-section img {
-    width: 100%; /* Stretch the image to fill the width of the div */
-    height: 100%; /* Stretch the image to fill the height of the div */
-    object-fit: cover; /* Ensure the image covers the entire div while maintaining aspect ratio */
-    position: absolute; /* Position the image absolutely within the div */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
     top: 0;
     left: 0;
 }
 
-/* Media Queries for Responsiveness */
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
@@ -192,7 +191,7 @@ a:active {
     }
 
     .graphic-section {
-        display: none; /* Hide the graphic section */
+        display: none;
     }
 }
 
