Refactor login form to use email field and update validation logic

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body {
 .form input {
     padding: 5px;
     border-radius: 10px;
-    border: 1.5px solid black;
+    border: 1.5px solid gray;
     height: 35px;
     margin-bottom: 10px;
 }
